Add doxygen comments - project finished and not tested

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "ether.h": "c",
         "inet.h": "c",
         "if_ether.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "time.h": "c",
+        "unistd.h": "c"
     }
 }
